  * checks/cruft.pm:
    + [BR] Fix complex regular subexpression recursion limit.
      Strip comments is only done on first 8192 characters.
      (Closes: #795955).
    + [BR] Performance improvement check if line < 1024 before
      stripping comment. Classify to minified if line > 1024.
    + [BR] Fix false positive in missing-sources directory
      search path.
  * checks/description.pm:
    + [AB] Fix false positives in
      perl-module-name-not-mentioned-in-description.  (Closes: #795779)
  * checks/fields.{desc,pm}:
    + [JW] Use "an" (instead of "a") before "HTTP".
    + [NT] Assert that -dbgsym packages are in the "debug" section.
      Thanks to Jean-Michel Vourgère for reporting the issue.
  * checks/obsolete-sites.{desc,pm}:
    + [AB] New check with tag obsolete-url-in-packaging to check for URLs
      of hosting sites with frozen contents or (soon to be) closed hosting
      sites (Google Code, Gitorious, Freshmeat, etc.) inside the
      packaging.  (Closes: #793503)
  * checks/scripts.pm:
    + [BR] Fix Unescaped left brace in regex.  (Closes: #788926)
  * checks/version-substvars.pm:
    + [BR] Fix Unescaped left brace in regex is deprecated line 68.
  * checks/watch.desc:
    + [BR] Upgrade upstream PGP keys location.  (Closes: #796311)

  * data/binaries/embedded-libs:
    + [RG] Add another matching string for libidn
  * data/fields/archive-sections:
    + [NT] Remove the "debugsym" section as "ddebs" will be put in
      the regular "debug" section.
  * data/scripts/maintainer-script-bad-command:
    + [AB] Fix maintainer-script-should-not-use-adduser-system-without-home
      false positve in cases where --system and --home are ordered
      differently than initially expected. (Closes: #797395)

  * debian/control:
    + [AB] Update Vcs-Browser header to use https and cgit.

  * lib/Lintian/{Tags.pm,Tag/Override.pm}:
    + [BR] Support tag renaming. Warn about renamed
      tags.

  * t/runtests: