@@ -1,6 +1,0 @@
-Testname: debhelper-dh-clean-k-ok
-Sequence: 6000
-Version: 1.0
-Description: Test that debhelper < 7 packages can use dh_clean -k
-Test-Against:
- dh-clean-k-is-deprecated
