@@ -10,6 +10,7 @@ W: generic-dh-make-2005 source: debian-rules-ignores-make-clean-error line 47
 W: generic-dh-make-2005 source: debian-rules-missing-recommended-target build-arch
 W: generic-dh-make-2005 source: debian-rules-missing-recommended-target build-indep
 W: generic-dh-make-2005 source: debian-rules-sets-DH_COMPAT line 12
+W: generic-dh-make-2005 source: dh-clean-k-is-deprecated
 W: generic-dh-make-2005 source: dh_suidregister-is-obsolete line 85
 W: generic-dh-make-2005 source: package-uses-deprecated-debhelper-compat-version 2
 W: generic-dh-make-2005: copyright-without-copyright-notice
